Fix sidebar for dark mode

--- a/resources/sass/darkmode.scss
+++ b/resources/sass/darkmode.scss
@@ -36,7 +36,7 @@ body {
     color: #c0c0c0 !important;
 }
 
-.text-dark {
+.text-dark, .link-dark {
     color: #ffffff !important;
 }
 
